[package]
name = "simplylock"
version = "0.7.0"
description = "A simple and lightweight Linux console locking tool."
authors = ["Marco Cameriero <me@marcocameriero.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/95ulisse/simplylock"
homepage = "https://github.com/95ulisse/simplylock"
readme = "README.md"

[dependencies]
structopt = "0.3.0"
users = "0.9.1"
pwd = "1.3.0"
vt = "0.2.1"
failure = "0.1.5"
atoi = "0.3.1"
pam-sys = "0.5.6"
nix = "0.15.0"
termion = "1.5.3"
